--- a/TypeScript-Refactor/index.html
+++ b/TypeScript-Refactor/index.html
@@ -9,7 +9,7 @@
       src="https://kit.fontawesome.com/3bfd3ce9e5.js"
       crossorigin="anonymous"
     ></script>
-    <title>VanillaJSTicTacToe</title>
+    <title>TypeScript TicTacToe</title>
   </head>
   <body>
     <main>
